--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>WCB cafe-NEWS</title>
-        <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
+        <title>Chiba Lotte</title>
+        <meta name="description" content="千葉ロッテマリーンズは、日本プロ野球（NPB）パシフィック・リーグに所属するプロ野球球団です。
+本拠地は千葉県千葉市のZOZOマリンスタジアムで、1970年に「ロッテオリオンズ」として誕生し、1992年から現在の名称になりました。">
         <meta name="viewport" content="width=device-width,initial-scale=1">
     
         <link rel="icon" type="image/png" href="images/favicon.png">
