--- a/yu/LOSO.HTML
+++ b/yu/LOSO.HTML
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>好きな野球選手と球場飯</title>
+    <title>ホーム</title>
+    
     <style>
         body {
             font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
@@ -80,7 +82,7 @@
 
     <div class="container">
         <section class="section">
-            <h2>好きな野球選手</h2>
+            <h2>好きな野球選手と球場飯</h2>
             <div class="grid-container">
                 <div class="card">
                     <img src="hiro.jpg" alt="広池">
@@ -125,6 +127,8 @@
 
         <footer class="footer">
             フッター情報
+            <p>非公式ページ</p>
+
         </footer>
     </div>
 
