--- a/yu/id.html
+++ b/yu/id.html
@@ -74,8 +74,8 @@
 
     <div class="container">
         <header class="nav-bar">
-            <div class="top-link"><a href="#">topへ</a></div>
-            <div class="access-link"><a href="#">アクセス</a></div>
+            <span class="logo"><a href="LOSO.html">自分の好きな球場飯</a></span>
+            <span class="id-link"><a href="SIXYO.html">アクセス</a></span>
         </header>
 
         <section class="section logo-section">
@@ -89,6 +89,7 @@
 
         <footer class="footer">
             フッター情報
+            <p>非公式ページ</p>
         </footer>
     </div>
 
