--- a/yu/LOSO.HTML
+++ b/yu/LOSO.HTML
@@ -85,19 +85,19 @@
             <h2>好きな野球選手と球場飯</h2>
             <div class="grid-container">
                 <div class="card">
-                    <img src="hiro.jpg" alt="広池">
+                    <img src="photo/hiro.jpg" alt="広池">
                     <div class="item-name">廣池康志郎</div>
                 </div>
                 <div class="card">
-                    <img src="ojima.jpg" alt="小島">
+                    <img src="photo/ojima.jpg" alt="小島">
                     <div class="item-name">小島和哉</div>
                 </div>
                 <div class="card">
-                    <img src="KAKUNAKA.jpg" alt="角中">
+                    <img src="photo/KAKUNAKA.jpg" alt="角中">
                     <div class="item-name">角中勝也</div>
                 </div>
                 <div class="card">
-                    <img src="OIP.jpg" alt="清田">
+                    <img src="photo/OIP.jpg" alt="清田">
                     <div class="item-name">清田育宏</div>
                 </div>
             </div>
@@ -107,19 +107,19 @@
             <h2>自分の好きな球場飯</h2>
             <div class="grid-container">
                 <div class="card">
-                    <img src="motuni.jpg" alt="もつ煮">
+                    <img src="photo/motuni.jpg" alt="もつ煮">
                     <div class="item-name">もつ煮</div>
                 </div>
                 <div class="card">
-                    <img src="ro-suto.jpg" alt="小島">
+                    <img src="photo/ro-suto.jpg" alt="小島">
                     <div class="item-name">小島のローストビーフ丼</div>
                 </div>
                 <div class="card">
-                    <img src="reimen.jpg" alt="画像">
+                    <img src="photo/reimen.jpg" alt="画像">
                     <div class="item-name">中森の野菜たっぷり冷麺</div>
                 </div>
                 <div class="card">
-                    <img src="butadon.jpg" alt="画像">
+                    <img src="photo/butadon.jpg" alt="画像">
                     <div class="item-name">帯広豚丼</div>
                 </div>
             </div>
