--- a/yu/id.html
+++ b/yu/id.html
@@ -79,12 +79,12 @@
         </header>
 
         <section class="section logo-section">
-            <img src="LOTTE.jpg" alt="ロッテロゴ">
+            <img src="photo/LOTTE.jpg" alt="ロッテロゴ">
         </section>
 
         <section class="section content-section">
             <div>好きな野球チーム</div>
-            <img src="MARINZU.jpg" alt="千葉ロッテ">
+            <img src="photo/MARINZU.jpg" alt="千葉ロッテ">
         </section>
 
         <footer class="footer">
